--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "com.meta.xr.sdk.all": "71.0.0",
     "com.unity.2d.sprite": "1.0.0",
+    "com.unity.adaptiveperformance": "5.1.1",
+    "com.unity.adaptiveperformance.google.android": "1.3.1",
     "com.unity.ai.navigation": "2.0.5",
     "com.unity.collab-proxy": "2.6.0",
     "com.unity.ide.rider": "3.0.34",
